# gtk-layer-background

./: Makefile.am  README.md  configure.ac
src/: Makefile.am  main.c
